解决命名空间问题

--- a/base-common/base-common-core/pom.xml
+++ b/base-common/base-common-core/pom.xml
@@ -14,7 +14,10 @@
     <description>base-common-core核心模块</description>
 
     <dependencies>
-
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
         <!-- SpringCloud Openfeign -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
